[gd_scene load_steps=7 format=3 uid="uid://bep00fq05udiu"]

[ext_resource type="Script" uid="uid://bd46xarcc3lsr" path="res://src/ground_item.gd" id="1_6ecyt"]
[ext_resource type="Texture2D" uid="uid://2gfourhixesk" path="res://assets/FreePixelSurvivalItemsPack/Items/88.png" id="1_dgtp1"]
[ext_resource type="Material" uid="uid://ddg3myh1qcdk1" path="res://shaders/ground_item.tres" id="2_a60gu"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6ecyt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a60gu"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_a60gu"]
properties/0/path = NodePath("TextureRect:tooltip_text")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:item_data")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="RigidBody2D" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_6ecyt")
gravity_scale = 0.0
script = ExtResource("1_6ecyt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a60gu")

[node name="TextureRect" type="TextureRect" parent="."]
material = ExtResource("2_a60gu")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(16, 16)
mouse_default_cursor_shape = 2
texture = ExtResource("1_dgtp1")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_a60gu")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_texture_rect_mouse_exited"]
